<resources>
    <!-- Strings related to activities name -->
    <string name="app_name">Canciones Favoritas</string>
    <string name="tracks_list_activity">Lista de canciones</string>
    <string name="add_track_activity">Agregar canción</string>
    <string name="track_details_activity">Detalles de la canción</string>
    <string name="register_activity">Registrar</string>

    <!-- Strings related to login and create account -->
    <string name="prompt_username">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_add_user">Hubo un error al agregar el usuario</string>
    <string name="add_user_success">Se agregó el usuario exitosamente</string>

    <!-- Strings related to tracks list -->
    <string name="empty_list">Aún no hay canciones agregadas por los usuarios.</string>
    <string name="no_internet_connection">No hay conexión a internet</string>
    <string name="button_filter">Filtrar</string>

    <!-- Strings related to add track, track details and filter-->
    <string name="name">Nombre</string>
    <string name="album">Album</string>
    <string name="interpreter">Intérprete</string>
    <string name="year">Año</string>
    <string name="language">Idioma</string>
    <string name="rhythm">Ritmo</string>
    <string name="rating">Calificación</string>
    <string name="add">agregar canción</string>
    <string-array name="rhythm_list">
        <item>Balada</item>
        <item>Salsa</item>
        <item>Merengue</item>
        <item>Vallenato</item>
        <item>Reggaeton</item>
    </string-array>
    <string name="error_failed_add_track">Hubo un error al agregar la canción</string>
    <string name="add_track_success">La canción se agregó exitosamente</string>
    <string name="create_account_head">Crear una cuenta</string>
    <string name="filter_head">Filtrar canciones por</string>

    <!-- String related to menus -->
    <string name="action_filter">Filtrar por</string>
    <string name="action_log_out">Cerrar sesión</string>
</resources>
