<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.bermusoft.favtracks.ui.AddTrackActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/name" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />


    <TextView
        android:id="@+id/albumTextView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_height"
        android:text="@string/album" />

    <EditText
        android:id="@+id/albumEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/interpreterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interpreter" />

    <EditText
        android:id="@+id/interpreterEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />


    <TextView
        android:id="@+id/yearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="4" />

    <TextView
        android:id="@+id/languageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <EditText
        android:id="@+id/languageEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />

    <TextView
        android:id="@+id/rhythmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rhythm" />

    <Spinner
        android:id="@+id/rhythmSpinner"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

</LinearLayout>