<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bermusoft.favtracks.ui.LoginActivity">


    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_view_appname_size" />

    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/appNameTextView"
        android:layout_centerHorizontal="true"
        android:maxLines="1"
        android:hint="@string/prompt_username" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_centerHorizontal="true"
        android:hint="@string/prompt_password"
        android:maxLines="1"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/log_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in_short"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register_button"
        style="?android:textAppearanceSmall"
        android:layout_width="@dimen/text_fields_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_register"
        android:textStyle="bold" />

</LinearLayout>
